# Tiny

./: .gitignore  .gitmodules  CMakeLists.txt
content/Configs/: scene.json
content/Models/scene/: scene.mtl
content/Models/wangzhaojun/: 1523_WangZhaoJun_D_512.tga  wangzhaojun.FBX
content/Shader/: default.fshader  default.vshader  defaultskinedmesh.vshader  skinedmesh.vshader
doc/: Editor.md  FileSystem.md  Tiny.md  build-system.md  graphics.md  lua-binding.md  plugin.md
plugin/: ImporterDef.json  PluginConfig.json
plugin/STB/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h
src/: Application.h  CMakeLists.txt  config.h
src/DebugTool/: Log.h
src/Ext/: CMakeLists.txt  Ext.cpp  Ext.h
src/Ext/Loader/: ImageLoader.cpp  ImageLoader.h
src/Graphics/: CMakeLists.txt  RenderSystem.cpp  RenderSystem.h
src/Graphics/GL/: Buffer.cpp  Buffer.h
src/Math/: Angle.h  CMakeLists.txt  MathForward.h  Matrix.h  Matrix3.h  Matrix4.h  Quaternion.h  RectangularMatrix.h  Tags.h  Tools.h  Vector.h  Vector2.h  Vector3.h  Vector4.h  dummy.cpp
src/Math/Test/: AngleTest.cpp  CMakeLists.txt  Matrix3Test.cpp  Matrix4Test.cpp  MatrixTest.cpp  QuaternionTest.cpp  RectangularMatrixTest.cpp  TestTools.h  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp  VectorTest.cpp
src/Platform/: CMakeLists.txt
src/Tiny/: Application.cpp  Application.h  CMakeLists.txt  Def.h  Macro.h  Tags.h  Types.h
src/Tiny/Core/: Engine.cpp  Engine.h  FrameManager.cpp  FrameManager.h  Service.cpp  Service.h  Time.h
src/Tiny/Core/Input/: InputSystem.cpp  InputSystem.h  InputsData.h  WindowsInputSystem.cpp  WindowsInputSystem.h
src/Tiny/Core/Plugin/: AbstractImporter.cpp  AbstractImporter.h  PluginManager.cpp  PluginManager.h
src/Tiny/Core/Resource/: ResourceManager.cpp  ResourceManager.h
src/Tiny/Core/Time/: Time.cpp  Time.h  Timeline.cpp  Timeline.h
src/Tiny/DebugTool/: Log.h
src/Tiny/FileSystem/: CFileWrapper.h  File.h  FileSystem.cpp  FileSystem.h  Utility.h
src/Tiny/Graphics/: CMakeLists.txt  RenderSystem.cpp  UniqueID.h
src/Tiny/Graphics/GL/: Buffer.h  Commondef.h  Definition.h  OpenGL.h
src/Tiny/Graphics/Mesh/: AABB.cpp  AABB.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SkinedMesh.cpp  SkinedMesh.h
src/Tiny/Graphics/Object/: Component.h  Object.cpp  Object.h  Transform.h
src/Tiny/Graphics/Renderer/: Renderer.cpp  Renderer.h
src/Tiny/Graphics/Renderer/Object/: AbstractObject.h  Buffer.cpp  Buffer.h
src/Tiny/Graphics/Scene/: Camera.cpp  Camera.h  Light.cpp  Light.h  Scene.cpp  Scene.h
src/Tiny/Graphics/Shader/: Material.cpp  Material.h  Shader.h
src/Tiny/Graphics/Texture/: Definition.h  ImageData.cpp  ImageData.h  TextureData.cpp  TextureData.h
src/Tiny/Input/: BaseInputEvent.h  Def.h  InputBuffer.cpp  InputBuffer.h  InputEvent.h  InputForward.h  InputQueue.cpp  InputQueue.h  InputSystem.cpp  InputSystem.h  InputsData.h  WindowsInputSystem.cpp  WindowsInputSystem.h
src/Tiny/Input/Interface/: Data.h  Input.cpp  Input.h
src/Tiny/Input/Module/: InputModule.h  InputQueue.h  JoypadModule.cpp  JoypadModule.h  KeyboardMouseModule.cpp  KeyboardMouseModule.h
src/Tiny/Math/: Angle.h  CMakeLists.txt  Distance.h  MathForward.h  Matrix.h  Matrix3.h  Matrix4.h  Quaternion.h  RectangularMatrix.h  Tags.h  Tools.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
src/Tiny/Math/Test/: AngleTest.cpp  CMakeLists.txt  Matrix3Test.cpp  Matrix4Test.cpp  MatrixTest.cpp  QuaternionTest.cpp  RectangularMatrixTest.cpp  Vector2Test.cpp  VectorTest.cpp
src/Tiny/Platform/Win/: AppWindows.cpp  GLFWKeyMap.cpp  GLFWKeyMap.h
support/: CMakeUtility.cmake  config.h.in  macro.cmake  win32.sh  win64.sh
